<resources>
    <string name="app_name">AIglasses</string>
    <string name="hello_world">测试AudioRecord，实现录音功能</string>
    <string name="menu_settings">Settings</string>

    <string name="btn_record_wav">录音WAV文件</string>
    <string name="btn_record_amr">录音AMR文件</string>
    <string name="btn_stop">停止录音</string>

    <string name="error_no_sdcard">没有SD卡，无法存储录音数据</string>
    <string name="error_state_record">正在录音中，请先停止录音</string>
    <string name="error_unknown">无法识别的错误</string>

    <string name="captureBtn">拍摄图片</string>
    <string name="selectBtn">选择图片</string>
    <string name="uploadBtn">上传图片</string>
    <string name="startBtn">开始识别</string>
    <string name="stopBtn">停止识别</string>

    <string name="killBtn">退出程序</string>
    <string name="btn_stop_navi">停止导航</string>
    <string name="search_adapter_text">城市</string>
</resources>