<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="Name" />

                <TextView
                    android:id="@+id/text"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:text="@string/hello_world" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/startBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/startBtn" />

                        <Button
                            android:id="@+id/stopBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/stopBtn" />

                        <Button
                            android:id="@+id/killBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/killBtn" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_record_amr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_record_amr" />

                        <Button
                            android:id="@+id/btn_record_wav"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_record_wav" />

                        <Button
                            android:id="@+id/btn_stop_rec"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_stop" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.camera.view.PreviewView
                        android:id="@+id/iv_camera"
                        android:layout_width="320dp"
                        android:layout_height="180dp">

                    </androidx.camera.view.PreviewView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_image"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="#555555" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/captureBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/captureBtn" />

                        <Button
                            android:id="@+id/selectBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/selectBtn" />

                        <Button
                            android:id="@+id/uploadBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/uploadBtn" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <com.amap.api.maps.MapView
                    android:id="@+id/gaode_map"
                    layout_width="320dp"
                    android:layout_width="320dp"
                    android:layout_height="400dp"
                    android:layout_gravity="center"
                    android:visibility="visible">

                    <EditText
                        android:id="@+id/search_edit"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:alpha="1"
                        android:background="#F8BCBC"
                        android:hint="@string/search_adapter_text"
                        android:textColor="#040303" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/search_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:background="#5E4F4F"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/search_edit"
                        app:layout_constraintVertical_bias="1.0"
                        tools:layout_editor_absoluteX="-51dp">

                    </androidx.recyclerview.widget.RecyclerView>

                    <Button
                        android:id="@+id/btn_stop_navi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/btn_stop_navi" />

                </com.amap.api.maps.MapView>


            </LinearLayout>

        </LinearLayout>


    </HorizontalScrollView>


</LinearLayout>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    android:orientation="vertical"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent">-->

    <!--</LinearLayout>-->